# magnuscarlsenmogger

./: .gitignore  CMakeLists.txt  README.md  debug.sh  italian_test.txt  out.txt  output1.txt  output3.txt  run.sh  test_all.sh  test_compare_moves.sh  test_e4.txt  test_elo.sh  test_italian.txt  test_out.txt  test_output.txt  test_output3.txt  test_squares
src/: board.cpp  board.h  debugger.cpp  debugger.h  evaluate.cpp  evaluate.h  gen.cpp  gen.hpp  magic.cpp  magic.h  main.cpp  move.cpp  move.h  piece_values.cpp  piece_values.h  search.cpp  search.h  tt.cpp  tt.h  zobrist.cpp  zobrist.h
src/eval/: defs.h  endgame.cpp  endgame.h  evaluate.cpp  evaluate.h  material.cpp  material.h  positional.cpp  positional.h  psqt.cpp  psqt.h
test/: README.md  TESTING_GUIDE.md  debug.txt  matein5.txt  moves_test.txt  perft.cpp  run_all_tests.sh  uci_main.cpp  unit_test.cpp
